# purdy

./: .gitignore  Cargo.toml  LESSONS.md  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: main.yml
crates/geom/src/: lib.rs  line.rs  utils.rs
crates/graphics_state/: Cargo.toml
crates/graphics_state/src/: draw_state.rs  geom.rs  graphics_state.rs  lib.rs  path.rs  pdf.rs  test_utils.rs
crates/path/: Cargo.toml
crates/path/src/: builder.rs  lib.rs  path.rs  pdf.rs  test_utils.rs  utils.rs  with_pdf.rs
crates/pdf/: Cargo.toml
crates/pdf/src/: dictionary.rs  document.rs  encodings.rs  error.rs  known.rs  lib.rs  macros.rs  object.rs  pdf.rs  rgb.rs  stream.rs  utils.rs  xref.rs
crates/pdf/src/document/: parsers.rs
crates/pdf/src/known/: sample.rs  sample_no_xref.rs
crates/pdf/src/object/: invariants.rs
crates/pdf/src/stream/: parsers.rs
crates/shared/: Cargo.toml
crates/shared/src/: cmyk.rs  color.rs  dash.rs  dimensions.rs  error.rs  gray.rs  lib.rs  line_width.rs  non_stroke_color.rs  page_dimensions.rs  rgb.rs  stroke_color.rs
crates/shared/src/cmyk/: test_utils.rs
crates/shared/src/gray/: test_utils.rs
crates/shared/src/rgb/: test_utils.rs
crates/tessellation/: Cargo.toml
crates/tessellation/src/: draw_state.rs  event_queue.rs  lib.rs
examples/pdf/playground/: Cargo.toml
examples/pdf/playground/src/: graphics_state.rs  main.rs  state.rs
examples/pdf/zero_length_line/: Cargo.toml
examples/pdf/zero_length_line/src/: build_line.rs  commands.rs  main.rs
examples/playground/: Cargo.toml
examples/playground/src/: main.rs
pdfs/sample/actual/: .gitignore
