[workspace]
members = [
    "crates/lyon",
    "crates/path",
    "crates/tessellation",
    "crates/algorithms",
    "crates/tess2",
    "crates/geom",
    "crates/extra",
    "crates/pdf",
    "cli",
    "wasm_test",
    "examples/wgpu",
    "examples/wgpu_svg",
    "bench/tess",
    "bench/path",
    "bench/geom",
    "examples/pdf/zero_length_line",
]

exclude = [
    ".vscode/*",
    "all.sh",
    "assets/*",
    "examples/*",
    "bench/*",
    "cli/*",
]

resolver = "2"

# Uncomment this when profiling.
#[profile.release]
#debug = true
