[package]
name = "playground"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16"
image = "0.23"
bytemuck = "1.7.3"
wgpu = "0.11.1"
futures = "0.3.19"
lyon = { path = "../../../crates/lyon", features = ["extra"] }
pdf = { path = "../../../crates/pdf" }
# TODO: Delete these:
anyhow = "1.0.52"
thiserror = "1.0.30"