[package]
edition = "2018"
name = "playground"
resolver = "2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7.3"
futures = "0.3.19"
graphics_state = {path = "../../../crates/graphics_state"}
image = "0.23"
lyon = {path = "../../../crates/lyon", features = ["extra"]}
pdf = {path = "../../../crates/pdf"}
shared = {path = "../../../crates/shared"}
png = "0.16"
wgpu = "0.11.1"
